# agent-context-code

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  agents.md  common_utils.py  pyproject.toml  pytest.ini
.cursor/plans/: uninstall-script-plan_d5bf2ca0.plan.md
chunking/: available_languages.py  base_chunker.py  multi_language_chunker.py  structured_data_chunker.py
chunking/languages/: __init__.py  bash_chunker.py  css_chunker.py  elixir_chunker.py  go_chunker.py  haskell_chunker.py  hcl_chunker.py  html_chunker.py  java_chunker.py  jsx_chunker.py  lua_chunker.py  php_chunker.py  ruby_chunker.py  scala_chunker.py  sql_chunker.py  swift_chunker.py
docs/: GRAPH_CONTEXT_IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  MCP_EVALUATION.md  MCP_SETUP.md  UI_INTERFACE_RESEARCH.md  gpu-install-investigation.md  issue-gitignore-cursorignore-support.md  issue-silent-large-file-skip.md  user-add-ons.md  victrix-server-perf-test.md
embeddings/: embedder.py  model_catalog.py  sentence_transformer.py
graph/: code_graph.py
mcp_server/: AGENTS.md  __init__.py  code_search_mcp.py  code_search_server.py  server.py  strings.yaml
merkle/: __init__.py  ignore_rules.py  merkle_dag.py  snapshot_manager.py
prompts/: lancedb-deep-dive-review.md
reranking/: reranker.py  reranker_catalog.py
research/: pre-pypi-review.md
scripts/: CLI_REFERENCE.md  cli.py  download_model_standalone.py  download_reranker_standalone.py  index_codebase.py  install.ps1  install.sh  launch_server.ps1  launch_server.py  launch_server.sh  prereqs.ps1  prereqs.sh  restart-dashboard.ps1  restart-mcp.ps1  uninstall.ps1  uninstall.sh
search/: incremental_indexer.py  indexer.py  searcher.py
tests/: README.md  run_tests.py  test_lancedb_schema.py
tests/fixtures/: __init__.py
tests/integration/: test_auto_reindex.py  test_full_flow.py  test_incremental_indexing.py  test_mcp_project_storage.py  test_packaging.py
tests/test_data/multi_language/: Calculator.hs  Calculator.php  Calculator.scala  Calculator.swift  calculator.ex  calculator.lua  calculator.rb  example.css  example.html  example.sh  example.sql  main.tf  package.json  project.toml
tests/unit/: test_cli.py  test_code_graph.py  test_code_search_server.py  test_common_utils.py  test_concurrency_locks.py  test_device_resolution.py  test_download_reranker_standalone.py  test_embedder_gpu_cleanup.py  test_huggingface_auth.py  test_ignore_rules.py  test_incremental_indexer_graph.py  test_indexer.py  test_mcp_tool_descriptions.py  test_merkle_dag.py  test_mode_router.py  test_multi_language.py  test_plan_regressions.py  test_reranker.py  test_reranker_catalog.py  test_searcher.py  test_sentence_transformer.py  test_ui_server.py  test_workspace_config.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/: ConfirmDialog.tsx  InfoPopover.tsx  Layout.tsx  ResultCard.tsx
ui/src/lib/: utils.ts
ui/src/pages/: HealthDashboard.tsx  ProjectsManager.tsx  SearchPanel.tsx  SettingsForm.tsx
ui/src/store/: useStore.ts
ui_server/: __init__.py  app.py  dependencies.py  server.py
ui_server/routes/: __init__.py  health.py  index.py  models.py  projects.py  search.py  server_control.py  settings.py
ui_server/static/: index.html
ui_server/static/assets/: charts-CRG51CKy.js  charts-DE4NecsR.js  index-BFljH_e2.css  index-CDctqz5s.js  index-CDzsFMzV.css  index-CI0DSQpf.css  index-CZgX5quv.js  index-CaGrLMLR.js  index-D9vwnYD-.js  index-DU6IFptJ.js  index-DzkEkyiI.css  index-KC3nEEWA.js  index-tnioL12q.css  query-DtOYq0D4.js  vendor-D1rR1hmV.js  vendor-D8gU2ryr.js
