[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-code"
version = "0.1.0"
# Vector backend: LanceDB (embedded, serverless). Default model: Qwen/Qwen3-Embedding-0.6B.
description = "Local semantic code search for Claude Code (MCP) using LanceDB, Unsloth Qwen3-Embedding, and AST/tree-sitter chunking. 100% local embeddings and indexing."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Farhan Ali Raza" }
]
maintainers = [
    { name = "Farhan Ali Raza" }
]
keywords = [
    "semantic-search",
    "code-search",
    "embeddings",
    "lancedb",
    "mcp",
    "claude",
    "tree-sitter",
    "chunking",
    "python",
]
dependencies = [
    "click>=8.2.1",
    # LanceDB: Embedded, serverless vector database.  Works like SQLite —
    # just point it at a local directory, no server/user/password needed.
    # This replaces faiss-cpu for vector storage and similarity search.
    "lancedb>=0.20.0",
    "pyarrow>=18.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "fastmcp>=2.12.2",
    "huggingface-hub>=0.34.4",
    "mcp>=1.13.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "PyYAML>=6.0",
    "rich>=14.1.0",
    # sentence-transformers: kept for model loading; also used by the Qwen3
    # embedding pipeline when running without the full unsloth stack.
    "sentence-transformers>=5.1.0",
    # transformers: pinned explicitly for Qwen3 model support (satisfied
    # transitively by sentence-transformers, but documented here for clarity).
    "transformers>=4.51.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-markdown>=0.3.2",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-svelte>=1.0.2",
    "tree-sitter-typescript>=0.23.2",
]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/tlines2016/agent-context-code"
Repository = "https://github.com/tlines2016/agent-context-code"
Documentation = "https://github.com/tlines2016/agent-context-code#readme"
Issues = "https://github.com/tlines2016/agent-context-code/issues"

[tool.setuptools.packages.find]
include = ["chunking*", "embeddings*", "search*", "mcp_server*", "merkle*", "reranking*", "graph*"]
