[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-local"
version = "1.0.0"
description = "Local semantic code search for AI coding assistants. MCP server with hybrid keyword + vector search and tree-sitter AST chunking. No API keys, no uploads — runs entirely on your machine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "tlines2016", email = "tlines2016@hotmail.com" }
]
maintainers = [
    { name = "tlines2016", email = "tlines2016@hotmail.com" }
]
keywords = [
    "semantic-search",
    "code-search",
    "code-indexing",
    "code-index",
    "code-context",
    "code-analysis",
    "embeddings",
    "vector-search",
    "hybrid-search",
    "lancedb",
    "mcp",
    "mcp-server",
    "mcp-tool",
    "model-context-protocol",
    "ai-agent",
    "ai-coding",
    "claude",
    "cursor",
    "codex",
    "copilot",
    "tree-sitter",
    "ast",
    "chunking",
    "indexing",
    "indexer",
    "rag",
    "retrieval",
    "local",
    "privacy",
]
dependencies = [
    "click>=8.2.1",
    # LanceDB: Embedded, serverless vector database.  Works like SQLite —
    # just point it at a local directory, no server/user/password needed.
    # This replaces faiss-cpu for vector storage and similarity search.
    "lancedb>=0.20.0",
    "pyarrow>=18.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "fastmcp>=2.12.2",
    "huggingface-hub>=0.34.4",
    "mcp>=1.13.1",
    "PyYAML>=6.0",
    "rich>=14.1.0",
    # sentence-transformers: kept for model loading; also used by the Qwen3
    # embedding pipeline when running without the full unsloth stack.
    "sentence-transformers>=5.1.0",
    # transformers: pinned explicitly for Qwen3 model support (satisfied
    # transitively by sentence-transformers, but documented here for clarity).
    "transformers>=4.51.0",
    "filelock>=3.13",
    "pathspec>=0.12.1",
    "tree-sitter>=0.20.0",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-markdown>=0.3.2",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-svelte>=1.0.2",
    "torch>=2.10.0",
    "tree-sitter-typescript>=0.23.2",
    # Tier 1 languages (Session B)
    "tree-sitter-bash>=0.23.0",
    "tree-sitter-html>=0.23.0",
    "tree-sitter-css>=0.23.0",
    # Tier 2 languages (Session D)
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-sql>=0.3.0",
    # Tier 3 languages (Session D)
    "tree-sitter-hcl>=1.0.0",
    "tree-sitter-scala>=0.23.0",
    "tree-sitter-lua>=0.5.0",
    "tree-sitter-elixir>=0.3.0",
    "tree-sitter-haskell>=0.23.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Environment :: Console",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
# GPU PyTorch extras — install with: uv sync --extra cu128
# Only one CUDA/ROCm extra can be active at a time (see [tool.uv] conflicts).
# Default (no extra): CPU torch from PyPI.
cu126 = ["torch>=2.10.0"]
cu128 = ["torch>=2.10.0"]
rocm = [                                            # ROCm 7.1+ (Linux only)
    "torch>=2.10.0; sys_platform == 'linux'",
    "triton-rocm>=3.6.0; sys_platform == 'linux'",
]

[project.urls]
Homepage = "https://github.com/tlines2016/agent-context-code"
Repository = "https://github.com/tlines2016/agent-context-code"
Documentation = "https://github.com/tlines2016/agent-context-code#readme"
Issues = "https://github.com/tlines2016/agent-context-code/issues"

[project.scripts]
agent-context-local = "scripts.cli:main"
agent-context-local-mcp = "mcp_server.server:main"

[tool.setuptools]
py-modules = ["common_utils"]

[tool.setuptools.packages.find]
include = ["chunking*", "embeddings*", "search*", "mcp_server*", "merkle*", "reranking*", "graph*", "scripts*"]

[tool.setuptools.package-data]
mcp_server = ["strings.yaml"]
"*" = ["py.typed"]

[tool.uv]
conflicts = [
    [
        { extra = "cu126" },
        { extra = "cu128" },
        { extra = "rocm" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-rocm", extra = "rocm" },
]
triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

